Fix progress bar not showing on media card with placeholder

--- a/ui/src/Components/CardList/Card.scss
+++ b/ui/src/Components/CardList/Card.scss
@@ -25,7 +25,7 @@
 
       .progress {
         position: absolute;
-        background: #2a2a2a;
+        background: #3a3a3a;
         left: 50%;
         opacity: 0;
         bottom: 1em;
